# ceyloanstay_gitops

./: .gitignore  README.md
services/: dockerBuild.sh
services/admin_service/: .dockerignore  Dockerfile  pyproject.toml
services/admin_service/app/: auth_util.py  crud.py  main.py  models.py  schemas.py
services/ads_service/: .dockerignore  Dockerfile  main.py  pyproject.toml
services/ads_service/app/: auth_util.py  cache.py  crud.py  database.py  main.py  minio_client.py  models.py  rabbitmq.py  schemas.py
services/ai_service/: Dockerfile  pyproject.toml
services/ai_service/app/: worker.py
services/argocd-apps/: admin-service-application.yaml  ads-service-application.yaml  ai-service-application.yaml  notification-service-application.yaml  search-service-application.yaml  super-admin-service-application.yaml  user-service-application.yaml
services/helm-charts/user-service/: values.yaml
services/notification_service/: Dockerfile  pyproject.toml
services/notification_service/app/: auth_util.py  crud.py  database.py  main.py  models.py  rabbitmq.py  schemas.py
services/search_service/: .dockerignore  Dockerfile  pyproject.toml
services/search_service/app/: crud.py  database.py  geo.py  main.py  models.py  schemas.py
services/super_admin_service/: Dockerfile  pyproject.toml
services/super_admin_service/app/: auth_util.py  crud.py  main.py  models.py  schemas.py
services/user_service/: Dockerfile  pyproject.toml
services/user_service/app/: auth_util.py  crud.py  database.py  main.py  models.py  rabbitmq.py  schemas.py
