[project]
name = "ads-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "minio>=7.2.20",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "python-multipart>=0.0.21",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
